--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "alecaddd/alecaddd-plugin",
+    "name": "gpltimes/gpltimes",
     "description": "GPlTimes",
     "type": "project",
     "license": "GPL",
